--- a/src/main.scss
+++ b/src/main.scss
@@ -86,15 +86,18 @@ pre, code {
     &.is-abs {
         position: absolute;
     }
-    &.is-fixed {
-        #{$root}-content {
+    &.is-fixed,
+    &.affix{
+        nav {
             position: fixed;
             top: 0;
+            left: $grid-gutter-width/2;
             bottom: 0;
             padding-right: 15px;
             overflow-y: scroll;
             width: 16.66667%;
             min-width: 200px;
+
 
             /*below mixin is an optional effect added to sidebar*/
             //@include shrouded-element-fixed(16.66667%);
@@ -125,9 +128,33 @@ pre, code {
 
 .resources__resource {
     cursor: pointer;
+    &.active {
+        font-weight: bold;
+    }
+    & > a {
+        text-decoration: none;
+        color: $body-color;
+    }
     &:active, &:focus {
         outline: none;
     }
+    & > a::before{
+        content:"\25b8";
+        padding:0 $spacer/2 0 0;
+    }
+    &.active > a{
+        &::before{
+            content:"\25be";
+        }
+    }
+}
+.resources__resource > .resources__list__endpoints {
+    height:0;
+    overflow:hidden;
+}
+
+.resources__resource.active > .resources__list__endpoints {
+    height:auto;
 }
 
 .resources__list__endpoints {
@@ -138,6 +165,11 @@ pre, code {
 
     li {
         margin: $spacer / 2 0;
+        &.active a {
+            font-weight: 700;
+            color: $pitch-black;
+            text-decoration: none;
+        }
     }
 
     .label {
@@ -151,7 +183,7 @@ pre, code {
         text-decoration: none;
         font-size: 0.875rem;
         transition: all 0.2s linear;
-
+        font-weight: normal;
         word-break: break-all;
 
         &:hover, &:focus {
@@ -161,11 +193,7 @@ pre, code {
         //    text-decoration: none;
         //}
 
-        &.is-current {
-            font-weight: 700;
-            color: $pitch-black;
-            text-decoration: none;
-        }
+
     }
 }
 
