--- a/src/index.jade
+++ b/src/index.jade
@@ -64,7 +64,7 @@ mixin typeTable(typeObj)
 
     each type in typeObj
 
-        section(class="documentation row")
+        section(class="documentation")
             .documentation__endpoints
                 .documentation__endpoints__params
                     h2(id=type.name  class='documentation__subheader' )
